# deputydev-extension-backend

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  DETAILED_README.md  Dockerfile  Pipfile  QUICK_START_GUIDE.md  README.md  agent_comment_mapping_backfill.py  bitbucket-pipelines.yml  cli_auth.py  config_template.json  deputy_dev.toml  deputy_dev_settings.toml  deputydev.toml  docker-compose.yml  feature_config.json  prod-config.json  pyproject.toml  readme_comprehensive.md  ruff.toml  settings.toml  testing.py  updated_bucket_data_full.csv  xx.py
.github/workflows/: code_quality.yaml  tests.yml
LaTeX/DeputyDev/: abstract.tex  additional_capabilities.tex  appendix.tex  approach.tex  choice_of_model.tex  code_cofig.tex  conclusion.tex  egbib.bib  experiment_results.tex  experiment_setting.tex  hypothesis.tex  implementation_details.tex  introduction.tex  keywords.tex  main.tex  page_config.tex  problem.tex
LaTeX/DeputyDev/Tables/: agentic-prompt-matrix.tex  deputydev-performance.tex  poor-performance-repo-list.tex  pr_review_stats.tex  pr_stats_by_size.tex
app/: 1function_lambda.kt  2class_object.kt  3loops.kt  4exception_handling.kt  advanced.js  annotation.java  basic_class.java  basic_kotlin.kt  basic_python.py  basic_ruby.rb  exception_handling.rb  interface.java  java1.java  java2.java  java3.java  kotlin.kt  listeners.py  loops.rb  message_queue.py  message_queue_v2.py  migrate.py  multi_cases.rb  nested_class.java  nested_functions.js  nested_loop.java  nested_modules.rb  ruby.rb  ruby_inheritance.rb  script.py  service.py  singleton.rb  singleton_nested_class.rb  static_blocks.java  try_catch.java  utils.py  validator.py
app/backend_common/adapters/: cancellation_checker_adapter.py  chat_attachments_repository_adapter.py  codegen_task_cache.py  config_manager_adapter.py  message_threads_repository_adapter.py
app/backend_common/caches/: auth_token_grace_period_cache.py  base.py  bedrock_cache.py  code_gen_tasks_cache.py  common.py  embedding_cache.py  extension_review_cache.py  ide_review_cache.py  websocket_connections_cache.py
app/caches/: __init__.py  base.py  deputy_dev.py  jiva.py
app/constants/: __init__.py  cache.py  chunking.py  constants.py  error_messages.py  eta_constants.py  jira.py  repo.py  sqs.py  success_messages.py
app/dao/: __init__.py  labsConn.py  openaiembedding.py  repo.py
app/decorators/: log_time.py
app/main/blueprints/one_dev_cli/: pyproject.toml
app/main/blueprints/one_dev_cli/app/clients/: one_dev.py
app/main/blueprints/one_dev_cli/app/exceptions/: exceptions.py
app/main/blueprints/one_dev_cli/app/managers/embedding/: embedding_manager.py
app/main/blueprints/one_dev_cli/app/managers/features/: base_feature_handler.py  factory.py
app/main/blueprints/one_dev_cli/app/managers/features/dataclasses/: main.py
app/main/blueprints/one_dev_cli/app/managers/features/handlers/: code_generation.py  code_plan_generation.py  docs_generation.py  generate_and_apply_diff.py  iterative_chat.py  plan_code_generation.py  plan_to_code.py  test_case_generation.py
app/main/blueprints/one_dev_cli/app/managers/initialization/: main.py
app/main/blueprints/one_dev_cli/app/ui/: __init__.py  main.py
app/main/blueprints/one_dev_cli/app/ui/helpers/: feature_response_handler.py  feature_runner.py
app/main/blueprints/one_dev_cli/app/ui/screens/: authentication.py  base_screen_handler.py  chat.py  exit.py  home.py  pr_config_selection.py  query_selection.py  repo_initialization.py  repo_selection.py
app/main/blueprints/one_dev_cli/app/ui/screens/common/: validators.py
app/main/blueprints/one_dev_cli/app/ui/screens/dataclasses/: main.py
app/managers/: __init__.py  diagnoBot.py  jiva.py  smartCodeChat.py  smartCodeReview.py
app/models/: __init__.py  chat.py  initialize_boat.py  initialize_jiva.py  smart_code.py
app/modules/: executor.py
app/routes/: __init__.py
app/service_clients/: __init__.py  base.py  base_custom_parser.py
app/sqs/: __init__.py  base.py  base_subscriber.py  genai_subscriber.py  model.py
app/tests/: setup_test.py  test_config.py  test_sample.py
build_data/deputydev_cli/: MANIFEST.in  pyproject.toml  settings.toml  setup.py
build_data/one_dev_cli/: MANIFEST.in  pyproject.toml  setup.py
db/: schema.sql
db/migrations/: 20220617090653_create_dummy_users_table.sql  20240726131917_enable_extensions.sql  20240726132027_create_buckets.sql  20240726132212_create_organisations.sql  20240726140315_create_scm_type.sql  20240726140353_create_org_scm_accounts.sql  20240726140428_create_workspaces.sql  20240726140509_create_repos.sql  20240726140618_create_pull_requests.sql  20240726140716_create_pr_comments.sql  20240726140748_create_experiments.sql  20240726140752_create_feedbacks.sql  20240727200325_insert_buckets.sql  20240727201155_insert_tata1mg_organisation.sql  20240806114720_alter_experiments_column.sql  20240806115120_alter_pull_requests_column.sql  20240809062438_alter_pull_requests_column.sql.sql  20240809062448_alter_pull_requests_column.sql.sql  20240913090556_create_users.sql  20240913090721_create_teams.sql  20240913090722_insert_tata1mg_teams.sql  20240913090809_create_user_teams.sql  20240913090823_create_integrations.sql  20240913090831_alter_workspaces.sql  20240913090835_create_tokens.sql  20240913091530_create_subscription_plans.sql  20240913091550_create_subscriptions.sql  20240913091600_create_subscription_periods.sql  20240916091600_delete_org_scm_accounts.sql  20240916091601_alter_pull_requests.sql  20240916091602_alter_repos.sql  20240916091603_alter_experiments.sql  20240916091604_alter_feedbacks.sql  20240916091605_alter_pr_comments.sql  20240924122446_drop_table_organisations.sql.sql  20241030070800_add_comment_bucket_mapping.sql  20241106061353_create_table_configurations.sql  20241111141000_alter_pr_comments.sql  20241112212200_alter_pull_request.sql  20241211140120_create_job.sql  (+62 more)
db/seeds/: 20250825092242_insert_team.sql
requirements/: base.txt
test/: conftest.py
test/fixtures/: __init__.py
test/main/: __init__.py
(+1903 files in other folders)
