[project]
name = "deputydev"
version = "13.1.5"
description = ""
authors = [{ name = "Deputy Dev", email = "deputydev@1mg.com" }]
readme = "README.md"
requires-python = ">=3.11.0,<3.12.0"

dependencies = [
  "cache_wrapper @ git+ssh://git@bitbucket.org/tata1mg/cache_wrapper.git@4.1.0",
  "torpedo @ git+ssh://git@bitbucket.org/tata1mg/torpedo.git@4.5.0-bump-rich",
  "tortoise_wrapper @ git+ssh://git@bitbucket.org/tata1mg/tortoise_wrapper.git@5.0.0-pre-release",
  "deputydev-core @ git+ssh://git@github.com/DeputyDev-1mg/deputydev-core.git@7.0.2",
  "psycopg2-binary==2.9.9",
  "pgvector==0.2.4",
  "pandas==2.1.3",
  "openai==1.78.0",
  "pypdf==4.0.1",
  "pillow==10.2.0",
  "websockets==14.0",
  "pyjwt==2.9.0",
  "supabase==2.11.0",
  "types-aiobotocore-bedrock-runtime==2.11.2",
  "types-aiobotocore-apigatewaymanagementapi==2.11.2",
  "types-aiobotocore-s3==2.11.2",
  "fuzzywuzzy",
  "azure-servicebus==7.14.1",
  "azure-mgmt-servicebus==8.2.1",
  "azure-identity==1.21.0",
  "aiobotocore==2.11.2",
  "botocore==1.34.34",
  "aiokafka[zstd]==0.10.0",
  "mmh3==5.1.0",
  "toml==0.10.2",
  "google-genai==1.13.0",
  "boto3-stubs[essential]>=1.38.42",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff==0.12.4",
]

