[project]
name = "deputydev"
version = "15.0.2"
description = ""
authors = [{ name = "Deputy Dev", email = "deputydev@1mg.com" }]
readme = "README.md"
requires-python = ">=3.11.0,<3.12.0"

dependencies = [
  "sanic==23.12.2",
  "sanic-ext==23.12.0",
  "aiohttp>=3.9.3,<4.0",
  "multidict==6.0.5",
  "redis==5.0.1",
  "tortoise-orm>=0.19,<0.22.0",
  "asyncpg>=0.25.0,<=0.27.0",
  "ujson==5.9.0",
  "elastic-apm==6.22.3",
  "sentry-sdk==1.45.1", # WARNING: DO NOT UPGRADE!
  "psutil==6.0.0",      # NOTE: required for elasticapm system metrics
  "python-json-logger==3.3.0",
  "rich==14.0.0",
  "setuptools>=78.1.1,<79.0.0",
  "deputydev-core @ git+https://github.com/tata1mg/deputydev-core.git@8.0.2",
  "psycopg2-binary==2.9.9",
  "pgvector==0.2.4",
  "pandas==2.1.3",
  "openai==1.78.0",
  "pypdf>=6.0.0,<7.0.0",
  "pillow>=10.3.0,<11.0.0",
  "websockets==14.0",
  "pyjwt==2.9.0",
  "types-aiobotocore-apigatewaymanagementapi==2.11.2",
  "types-aiobotocore-s3==2.11.2",
  "fuzzywuzzy",
  "azure-servicebus==7.14.1",
  "azure-mgmt-servicebus==8.2.1",
  "azure-identity==1.21.0",
  "aiobotocore>=2.15.0,<3.0.0",
  "botocore>=1.35.0,<2.0.0",
  "aiokafka[zstd]==0.10.0",
  "mmh3==5.1.0",
  "toml==0.10.2",
  "google-genai==1.13.0",
  "boto3-stubs[essential]>=1.38.42",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff==0.12.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.coverage.run]
source = ["app"]        # only measure your app code, not tests
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
omit = [
    "test/*",
]
