[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deputydev_cli"
version = "1.0.4"
description = "DeputyDev CLI is an AI-powered coding companion that streamlines software development with four core features: Code Generation to translate natural language into code, Documentation Generation for custom docstrings, Task Planning to structure development steps, and Test Generation for automated unit tests. This tool is designed to reduce development overhead and enhance coding productivity."
authors = [{ name = "DeputyDev", email = "deputydev@1mg.com" }]
requires-python = ">=3.9,<3.12"

dependencies = [
    "tortoise-orm==0.21.3",
    "langchain==0.0.344",
    "psycopg2-binary==2.9.9",
    "tiktoken==0.7.0",
    "pgvector==0.2.4",
    "pandas==2.1.3",
    "numpy==1.26.2",
    "openai==1.5.0",
    "pypdf==4.0.1",
    "pillow==10.2.0",
    "google-generativeai==0.3.2",
    "tree-sitter-languages==1.10.2",
    "tree-sitter==0.21.0",
    "tree-sitter-javascript==0.21.0",
    "pyjwt==2.9.0",
    "prompt-toolkit==3.0.48",
    "xxhash==3.5.0",
    "weaviate-client==4.9.6",
    "sanic==22.12.0",
    "gitpython==3.1.27",
    "giturlparse==0.12.0",
]

[project.urls]
Homepage = "https://deputydev.ai"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"your_package_name" = ["pyarmor_runtime_000000/pyarmor_runtime.so"]

[project.scripts]
deputydev-cli = "app.main.blueprints.deputydev_cli.app.ui.main:run_main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["app.backend_common*", "app.main.blueprints.deputy_dev*", "app.main.blueprints.jiva*", "app.main.blueprints.one_dev.*", "app.main.blueprints.one_dev"]
