[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "one_dev_cli"
version = "0.1.0-alpha"
description = "One Dev CLI"
authors = [{ name = "Tata1mg", email = "author@example.com" }]

dependencies = [
    "tortoise-orm==0.21.3",
    "langchain==0.0.344",
    "psycopg2-binary==2.9.9",
    "tiktoken==0.7.0",
    "pgvector==0.2.4",
    "pandas==2.1.3",
    "numpy==1.26.2",
    "openai==1.5.0",
    "pypdf==4.0.1",
    "pillow==10.2.0",
    "google-generativeai==0.3.2",
    "tree-sitter-languages==1.10.2",
    "tree-sitter==0.21.0",
    "tree-sitter-javascript==0.21.0",
    "pyjwt==2.9.0",
    "prompt-toolkit==3.0.48",
    "xxhash==3.5.0",
    "weaviate-client==4.9.6",
    "torpedo @ git+ssh://git@bitbucket.org/tata1mg/torpedo.git@3.6.1-rc2",
    "cache-wrapper @ git+ssh://git@bitbucket.org/tata1mg/cache_wrapper.git@2.4.1",
    "tortoise-wrapper @ git+ssh://git@bitbucket.org/tata1mg/tortoise_wrapper.git@0.6.2",
    "commonutils @ git+ssh://git@bitbucket.org/tata1mg/commonutils.git@DD-315-botocore-upgrade"
]

[project.scripts]
deputydev-cli = "app.main.blueprints.one_dev_cli.app.ui.main:main"


[tool.setuptools.packages.find]
where = ["."]
