[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "one_dev_cli"
version = "0.1.0-alpha"
description = "One Dev CLI"
authors = [{ name = "Tata1mg", email = "author@example.com" }]

dependencies = [
    "numpy >= 1.18.0",
    "pandas >= 1.1.0",
    "requests >= 2.0.0, < 3.0.0"
]

[tool.setuptools.package-data]
one_dev_cli = ["dist/app/common/*", "dist/app/main/blueprints/one_dev_cli/*"]

[project.scripts]
onedev = "app.ui.main:main"

[tool.setuptools.packages.find]
where = ["app"]
include = ["app.common", "app.one_dev_cli"]